--- a/Classification based on the First Original Featuring Result.ipynb
+++ b/Classification based on the First Original Featuring Result.ipynb
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "54fa1d66",
    "metadata": {},
    "outputs": [
@@ -2234,8 +2234,139 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "ed461b71",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\david\\AppData\\Roaming\\Python\\Python39\\site-packages\\keras\\src\\layers\\convolutional\\base_conv.py:99: UserWarning: Do not pass an `input_shape`/`input_dim` argument to a layer. When using Sequential models, prefer using an `Input(shape)` object as the first layer in the model instead.\n",
+      "  super().__init__(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/50\n",
+      "\u001b[1m63897/63897\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m301s\u001b[0m 5ms/step - accuracy: 0.6885 - loss: 1.2634 - val_accuracy: 0.7165 - val_loss: 1.1355 - learning_rate: 0.0010\n",
+      "Epoch 2/50\n",
+      "\u001b[1m63897/63897\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m349s\u001b[0m 5ms/step - accuracy: 0.7184 - loss: 1.1203 - val_accuracy: 0.7229 - val_loss: 1.0947 - learning_rate: 0.0010\n",
+      "Epoch 3/50\n",
+      "\u001b[1m63897/63897\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m333s\u001b[0m 5ms/step - accuracy: 0.7237 - loss: 1.0933 - val_accuracy: 0.7238 - val_loss: 1.0807 - learning_rate: 0.0010\n",
+      "Epoch 4/50\n",
+      "\u001b[1m63897/63897\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m332s\u001b[0m 5ms/step - accuracy: 0.7265 - loss: 1.0788 - val_accuracy: 0.7285 - val_loss: 1.0718 - learning_rate: 0.0010\n",
+      "Epoch 5/50\n",
+      "\u001b[1m63897/63897\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m309s\u001b[0m 5ms/step - accuracy: 0.7281 - loss: 1.0711 - val_accuracy: 0.7284 - val_loss: 1.0709 - learning_rate: 0.0010\n",
+      "Epoch 6/50\n",
+      "\u001b[1m63897/63897\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m298s\u001b[0m 5ms/step - accuracy: 0.7286 - loss: 1.0669 - val_accuracy: 0.7288 - val_loss: 1.0575 - learning_rate: 0.0010\n",
+      "Epoch 7/50\n",
+      "\u001b[1m63897/63897\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2131s\u001b[0m 33ms/step - accuracy: 0.7294 - loss: 1.0621 - val_accuracy: 0.7276 - val_loss: 1.0658 - learning_rate: 0.0010\n",
+      "Epoch 8/50\n",
+      "\u001b[1m63897/63897\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m303s\u001b[0m 5ms/step - accuracy: 0.7296 - loss: 1.0601 - val_accuracy: 0.7319 - val_loss: 1.0518 - learning_rate: 0.0010\n",
+      "Epoch 9/50\n",
+      "\u001b[1m63897/63897\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m311s\u001b[0m 5ms/step - accuracy: 0.7304 - loss: 1.0565 - val_accuracy: 0.7291 - val_loss: 1.0637 - learning_rate: 0.0010\n",
+      "Epoch 10/50\n",
+      "\u001b[1m63897/63897\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m312s\u001b[0m 5ms/step - accuracy: 0.7307 - loss: 1.0540 - val_accuracy: 0.7303 - val_loss: 1.0522 - learning_rate: 0.0010\n",
+      "Epoch 11/50\n",
+      "\u001b[1m63897/63897\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m303s\u001b[0m 5ms/step - accuracy: 0.7304 - loss: 1.0538 - val_accuracy: 0.7288 - val_loss: 1.0514 - learning_rate: 0.0010\n",
+      "Epoch 12/50\n",
+      "\u001b[1m63897/63897\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m301s\u001b[0m 5ms/step - accuracy: 0.7312 - loss: 1.0499 - val_accuracy: 0.7324 - val_loss: 1.0474 - learning_rate: 0.0010\n",
+      "Epoch 13/50\n",
+      "\u001b[1m63897/63897\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m304s\u001b[0m 5ms/step - accuracy: 0.7311 - loss: 1.0501 - val_accuracy: 0.7315 - val_loss: 1.0522 - learning_rate: 0.0010\n",
+      "Epoch 14/50\n",
+      "\u001b[1m63897/63897\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m309s\u001b[0m 5ms/step - accuracy: 0.7315 - loss: 1.0485 - val_accuracy: 0.7298 - val_loss: 1.0493 - learning_rate: 0.0010\n",
+      "Epoch 15/50\n",
+      "\u001b[1m63897/63897\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m302s\u001b[0m 5ms/step - accuracy: 0.7317 - loss: 1.0480 - val_accuracy: 0.7313 - val_loss: 1.0505 - learning_rate: 0.0010\n",
+      "\u001b[1m19968/19968\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m50s\u001b[0m 2ms/step\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\david\\anaconda3\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1318: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CNN Accuracy: 0.7315583712333441\n",
+      "CNN Precision: 0.6219470482738547\n",
+      "CNN Recall: 0.7315583712333441\n",
+      "CNN F1-score: 0.6510008505748088\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score\n",
+    "from tensorflow.keras.utils import to_categorical\n",
+    "from tensorflow.keras.models import Sequential\n",
+    "from tensorflow.keras.layers import Conv1D, MaxPooling1D, Flatten, Dense\n",
+    "from tensorflow.keras.callbacks import EarlyStopping, ReduceLROnPlateau\n",
+    "\n",
+    "features = ['posx', 'posy', 'posx_n', 'posy_n', 'spdx', 'spdy', 'spdx_n', 'spdy_n', 'aclx', 'acly', \n",
+    "            'aclx_n', 'acly_n', 'hedx', 'hedy', 'hedx_n', 'hedy_n']\n",
+    "X = df[features]\n",
+    "Y = df['class'].astype(int).values\n",
+    "Y = to_categorical(Y)\n",
+    "\n",
+    "X_train, X_test, Y_train, Y_test = train_test_split(X, Y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "# Normalizing the features\n",
+    "scaler = StandardScaler()\n",
+    "X_train = scaler.fit_transform(X_train)\n",
+    "X_test = scaler.transform(X_test)\n",
+    "\n",
+    "# Reshape the input data to fit the Conv1D layer\n",
+    "sequence_length = X_train.shape[1]\n",
+    "X_train = X_train.reshape((X_train.shape[0], sequence_length, 1))\n",
+    "X_test = X_test.reshape((X_test.shape[0], sequence_length, 1))\n",
+    "\n",
+    "model = Sequential([\n",
+    "    Conv1D(filters=64, kernel_size=2, activation='relu', input_shape=(sequence_length, 1)),\n",
+    "    MaxPooling1D(pool_size=2),\n",
+    "    Conv1D(filters=128, kernel_size=2, activation='relu'),\n",
+    "    MaxPooling1D(pool_size=2),\n",
+    "    Flatten(),\n",
+    "    Dense(64, activation='relu'),\n",
+    "    Dense(20, activation='softmax')  # Assuming 3 classes\n",
+    "])\n",
+    "\n",
+    "model.compile(optimizer='adam', loss='categorical_crossentropy', metrics=['accuracy'])\n",
+    "\n",
+    "early_stopping = EarlyStopping(monitor='val_loss', patience=3, restore_best_weights=True)\n",
+    "reduce_lr = ReduceLROnPlateau(monitor='val_loss', factor=0.2, patience=2, min_lr=0.001)\n",
+    "\n",
+    "model.fit(X_train, Y_train, epochs=50, batch_size=32, validation_split=0.2, callbacks=[early_stopping, reduce_lr])\n",
+    "\n",
+    "Y_pred_prob = model.predict(X_test)\n",
+    "Y_pred = np.argmax(Y_pred_prob, axis=1)\n",
+    "Y_test_classes = np.argmax(Y_test, axis=1)\n",
+    "\n",
+    "accuracy = accuracy_score(Y_test_classes, Y_pred)\n",
+    "precision = precision_score(Y_test_classes, Y_pred, average='weighted')\n",
+    "recall = recall_score(Y_test_classes, Y_pred, average='weighted')\n",
+    "f1 = f1_score(Y_test_classes, Y_pred, average='weighted')\n",
+    "\n",
+    "print(\"CNN Accuracy:\", accuracy)\n",
+    "print(\"CNN Precision:\", precision)\n",
+    "print(\"CNN Recall:\", recall)\n",
+    "print(\"CNN F1-score:\", f1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "87a8e5af",
    "metadata": {},
    "outputs": [],
    "source": []
