--- a/Classification based on the Second Original Featuring Result.ipynb
+++ b/Classification based on the Second Original Featuring Result.ipynb
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "73c851ff",
    "metadata": {},
    "outputs": [
@@ -1522,8 +1522,163 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "e3ee522e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Unique classes in target: [0 2 1]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\david\\AppData\\Roaming\\Python\\Python39\\site-packages\\keras\\src\\layers\\convolutional\\base_conv.py:99: UserWarning: Do not pass an `input_shape`/`input_dim` argument to a layer. When using Sequential models, prefer using an `Input(shape)` object as the first layer in the model instead.\n",
+      "  super().__init__(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/50\n",
+      "\u001b[1m63897/63897\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m340s\u001b[0m 5ms/step - accuracy: 0.7293 - loss: 0.7208 - val_accuracy: 0.7632 - val_loss: 0.6572 - learning_rate: 0.0010\n",
+      "Epoch 2/50\n",
+      "\u001b[1m63897/63897\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m340s\u001b[0m 5ms/step - accuracy: 0.7672 - loss: 0.6505 - val_accuracy: 0.7755 - val_loss: 0.6343 - learning_rate: 0.0010\n",
+      "Epoch 3/50\n",
+      "\u001b[1m63897/63897\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m324s\u001b[0m 5ms/step - accuracy: 0.7756 - loss: 0.6334 - val_accuracy: 0.7814 - val_loss: 0.6236 - learning_rate: 0.0010\n",
+      "Epoch 4/50\n",
+      "\u001b[1m63897/63897\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m304s\u001b[0m 5ms/step - accuracy: 0.7800 - loss: 0.6240 - val_accuracy: 0.7843 - val_loss: 0.6155 - learning_rate: 0.0010\n",
+      "Epoch 5/50\n",
+      "\u001b[1m63897/63897\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m294s\u001b[0m 5ms/step - accuracy: 0.7834 - loss: 0.6162 - val_accuracy: 0.7855 - val_loss: 0.6124 - learning_rate: 0.0010\n",
+      "Epoch 6/50\n",
+      "\u001b[1m63897/63897\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m287s\u001b[0m 4ms/step - accuracy: 0.7854 - loss: 0.6118 - val_accuracy: 0.7876 - val_loss: 0.6088 - learning_rate: 0.0010\n",
+      "Epoch 7/50\n",
+      "\u001b[1m63897/63897\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2132s\u001b[0m 33ms/step - accuracy: 0.7870 - loss: 0.6080 - val_accuracy: 0.7879 - val_loss: 0.6087 - learning_rate: 0.0010\n",
+      "Epoch 8/50\n",
+      "\u001b[1m63897/63897\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m296s\u001b[0m 5ms/step - accuracy: 0.7882 - loss: 0.6050 - val_accuracy: 0.7871 - val_loss: 0.6094 - learning_rate: 0.0010\n",
+      "Epoch 9/50\n",
+      "\u001b[1m63897/63897\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m302s\u001b[0m 5ms/step - accuracy: 0.7888 - loss: 0.6039 - val_accuracy: 0.7886 - val_loss: 0.6040 - learning_rate: 0.0010\n",
+      "Epoch 10/50\n",
+      "\u001b[1m63897/63897\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m306s\u001b[0m 5ms/step - accuracy: 0.7903 - loss: 0.5999 - val_accuracy: 0.7907 - val_loss: 0.6021 - learning_rate: 0.0010\n",
+      "Epoch 11/50\n",
+      "\u001b[1m63897/63897\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m295s\u001b[0m 5ms/step - accuracy: 0.7913 - loss: 0.5978 - val_accuracy: 0.7909 - val_loss: 0.6011 - learning_rate: 0.0010\n",
+      "Epoch 12/50\n",
+      "\u001b[1m63897/63897\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m293s\u001b[0m 5ms/step - accuracy: 0.7920 - loss: 0.5958 - val_accuracy: 0.7922 - val_loss: 0.5965 - learning_rate: 0.0010\n",
+      "Epoch 13/50\n",
+      "\u001b[1m63897/63897\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m300s\u001b[0m 5ms/step - accuracy: 0.7922 - loss: 0.5952 - val_accuracy: 0.7917 - val_loss: 0.6002 - learning_rate: 0.0010\n",
+      "Epoch 14/50\n",
+      "\u001b[1m63897/63897\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m295s\u001b[0m 5ms/step - accuracy: 0.7929 - loss: 0.5936 - val_accuracy: 0.7930 - val_loss: 0.5966 - learning_rate: 0.0010\n",
+      "Epoch 15/50\n",
+      "\u001b[1m63897/63897\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m276s\u001b[0m 4ms/step - accuracy: 0.7934 - loss: 0.5926 - val_accuracy: 0.7924 - val_loss: 0.5959 - learning_rate: 0.0010\n",
+      "Epoch 16/50\n",
+      "\u001b[1m63897/63897\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m226s\u001b[0m 4ms/step - accuracy: 0.7945 - loss: 0.5904 - val_accuracy: 0.7947 - val_loss: 0.5927 - learning_rate: 0.0010\n",
+      "Epoch 17/50\n",
+      "\u001b[1m63897/63897\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m234s\u001b[0m 4ms/step - accuracy: 0.7951 - loss: 0.5891 - val_accuracy: 0.7955 - val_loss: 0.5903 - learning_rate: 0.0010\n",
+      "Epoch 18/50\n",
+      "\u001b[1m63897/63897\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m229s\u001b[0m 4ms/step - accuracy: 0.7956 - loss: 0.5878 - val_accuracy: 0.7940 - val_loss: 0.5932 - learning_rate: 0.0010\n",
+      "Epoch 19/50\n",
+      "\u001b[1m63897/63897\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m232s\u001b[0m 4ms/step - accuracy: 0.7957 - loss: 0.5876 - val_accuracy: 0.7952 - val_loss: 0.5893 - learning_rate: 0.0010\n",
+      "Epoch 20/50\n",
+      "\u001b[1m63897/63897\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m171s\u001b[0m 3ms/step - accuracy: 0.7958 - loss: 0.5871 - val_accuracy: 0.7943 - val_loss: 0.5945 - learning_rate: 0.0010\n",
+      "Epoch 21/50\n",
+      "\u001b[1m63897/63897\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m166s\u001b[0m 3ms/step - accuracy: 0.7963 - loss: 0.5861 - val_accuracy: 0.7962 - val_loss: 0.5878 - learning_rate: 0.0010\n",
+      "Epoch 22/50\n",
+      "\u001b[1m63897/63897\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m164s\u001b[0m 3ms/step - accuracy: 0.7966 - loss: 0.5856 - val_accuracy: 0.7959 - val_loss: 0.5887 - learning_rate: 0.0010\n",
+      "Epoch 23/50\n",
+      "\u001b[1m63897/63897\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m169s\u001b[0m 3ms/step - accuracy: 0.7969 - loss: 0.5849 - val_accuracy: 0.7939 - val_loss: 0.5907 - learning_rate: 0.0010\n",
+      "Epoch 24/50\n",
+      "\u001b[1m63897/63897\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m172s\u001b[0m 3ms/step - accuracy: 0.7969 - loss: 0.5846 - val_accuracy: 0.7945 - val_loss: 0.5915 - learning_rate: 0.0010\n",
+      "\u001b[1m19968/19968\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m25s\u001b[0m 1ms/step\n",
+      "CNN Accuracy: 0.7954463645725411\n",
+      "CNN Precision: 0.8183120291541826\n",
+      "CNN Recall: 0.7954463645725411\n",
+      "CNN F1-score: 0.7756720393402297\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score\n",
+    "from tensorflow.keras.utils import to_categorical\n",
+    "from tensorflow.keras.models import Sequential\n",
+    "from tensorflow.keras.layers import Conv1D, MaxPooling1D, Flatten, Dense\n",
+    "from tensorflow.keras.callbacks import EarlyStopping, ReduceLROnPlateau\n",
+    "\n",
+    "def characterize_class(value):\n",
+    "    if value == 0:\n",
+    "        return 0\n",
+    "    elif value >= 1 and value <= 12:\n",
+    "        return 1\n",
+    "    else:\n",
+    "        return 2\n",
+    "\n",
+    "# Ensure 'class' column exists in df\n",
+    "df['class'] = df['class'].apply(characterize_class).astype(int)\n",
+    "\n",
+    "# Check the unique classes in the target\n",
+    "unique_classes = df['class'].unique()\n",
+    "print(f\"Unique classes in target: {unique_classes}\")\n",
+    "\n",
+    "features = ['posx', 'posy', 'posx_n', 'posy_n', 'spdx', 'spdy', 'spdx_n', 'aclx_n', 'hedx', 'hedy', 'hedx_n', 'hedy_n']\n",
+    "X = df[features].values\n",
+    "Y = to_categorical(df['class'].values, num_classes=3)\n",
+    "\n",
+    "X_train, X_test, Y_train, Y_test = train_test_split(X, Y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "# Normalizing the features\n",
+    "scaler = StandardScaler()\n",
+    "X_train = scaler.fit_transform(X_train)\n",
+    "X_test = scaler.transform(X_test)\n",
+    "\n",
+    "# Reshape the input data to fit the Conv1D layer\n",
+    "sequence_length = X_train.shape[1]\n",
+    "X_train = X_train.reshape((X_train.shape[0], sequence_length, 1))\n",
+    "X_test = X_test.reshape((X_test.shape[0], sequence_length, 1))\n",
+    "\n",
+    "model = Sequential([\n",
+    "    Conv1D(filters=64, kernel_size=2, activation='relu', input_shape=(sequence_length, 1)),\n",
+    "    MaxPooling1D(pool_size=2),\n",
+    "    Conv1D(filters=128, kernel_size=2, activation='relu'),\n",
+    "    MaxPooling1D(pool_size=2),\n",
+    "    Flatten(),\n",
+    "    Dense(64, activation='relu'),\n",
+    "    Dense(3, activation='softmax')  # Assuming 3 classes\n",
+    "])\n",
+    "\n",
+    "model.compile(optimizer='adam', loss='categorical_crossentropy', metrics=['accuracy'])\n",
+    "\n",
+    "early_stopping = EarlyStopping(monitor='val_loss', patience=3, restore_best_weights=True)\n",
+    "reduce_lr = ReduceLROnPlateau(monitor='val_loss', factor=0.2, patience=2, min_lr=0.001)\n",
+    "\n",
+    "model.fit(X_train, Y_train, epochs=50, batch_size=32, validation_split=0.2, callbacks=[early_stopping, reduce_lr])\n",
+    "\n",
+    "Y_pred_prob = model.predict(X_test)\n",
+    "Y_pred = np.argmax(Y_pred_prob, axis=1)\n",
+    "Y_test_classes = np.argmax(Y_test, axis=1)\n",
+    "\n",
+    "accuracy = accuracy_score(Y_test_classes, Y_pred)\n",
+    "precision = precision_score(Y_test_classes, Y_pred, average='weighted')\n",
+    "recall = recall_score(Y_test_classes, Y_pred, average='weighted')\n",
+    "f1 = f1_score(Y_test_classes, Y_pred, average='weighted')\n",
+    "\n",
+    "print(\"CNN Accuracy:\", accuracy)\n",
+    "print(\"CNN Precision:\", precision)\n",
+    "print(\"CNN Recall:\", recall)\n",
+    "print(\"CNN F1-score:\", f1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e12c87af",
    "metadata": {},
    "outputs": [],
    "source": []
