--- a/Classification based on the First Original Featuring Result.ipynb
+++ b/Classification based on the First Original Featuring Result.ipynb
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "54fa1d66",
    "metadata": {},
    "outputs": [
@@ -2366,7 +2366,83 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "87a8e5af",
+   "id": "6353ff1e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/10\n",
+      "\u001b[1m63897/63897\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1954s\u001b[0m 30ms/step - accuracy: 0.6833 - loss: 1.3123 - val_accuracy: 0.7194 - val_loss: 1.1391 - learning_rate: 0.0010\n",
+      "Epoch 2/10\n",
+      "\u001b[1m63897/63897\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1876s\u001b[0m 29ms/step - accuracy: 0.7207 - loss: 1.1295 - val_accuracy: 0.7238 - val_loss: 1.1046 - learning_rate: 0.0010\n",
+      "Epoch 3/10\n",
+      "\u001b[1m63897/63897\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1880s\u001b[0m 29ms/step - accuracy: 0.7281 - loss: 1.0756 - val_accuracy: 0.7343 - val_loss: 1.0397 - learning_rate: 0.0010\n",
+      "Epoch 4/10\n",
+      "\u001b[1m 2967/63897\u001b[0m \u001b[37m━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[1m27:01\u001b[0m 27ms/step - accuracy: 0.7326 - loss: 1.0473"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score\n",
+    "import tensorflow as tf\n",
+    "from tensorflow.keras.models import Sequential\n",
+    "from tensorflow.keras.layers import LSTM, Dense\n",
+    "from tensorflow.keras.callbacks import EarlyStopping, ReduceLROnPlateau\n",
+    "from tensorflow.keras.utils import to_categorical\n",
+    "\n",
+    "# Assuming df is your DataFrame and it is already loaded\n",
+    "features = ['posx', 'posy', 'spdx', 'spdy', 'spdx_n', 'spdy_n', 'aclx', 'acly', 'hedx', 'hedy', 'hedx_n', 'hedy_n']\n",
+    "X = df[features].values\n",
+    "Y = df['class'].astype(int).values\n",
+    "\n",
+    "Y = to_categorical(Y, num_classes=20)\n",
+    "\n",
+    "sequence_length = X.shape[1]\n",
+    "X = X.reshape(-1, sequence_length, 1)\n",
+    "\n",
+    "X_train, X_test, Y_train, Y_test = train_test_split(X, Y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "model = Sequential([\n",
+    "    LSTM(128, input_shape=(sequence_length, 1), return_sequences=True),\n",
+    "    LSTM(64, return_sequences=True),\n",
+    "    LSTM(32, return_sequences=True),\n",
+    "    LSTM(16),\n",
+    "    Dense(20, activation='softmax')\n",
+    "])\n",
+    "\n",
+    "model.compile(optimizer='adam', loss='categorical_crossentropy', metrics=['accuracy'])\n",
+    "\n",
+    "early_stopping = EarlyStopping(monitor='val_loss', patience=3, restore_best_weights=True)\n",
+    "reduce_lr = ReduceLROnPlateau(monitor='val_loss', factor=0.2, patience=2, min_lr=0.001)\n",
+    "\n",
+    "model.fit(X_train, Y_train, epochs=10, batch_size=32, validation_split=0.2, callbacks=[early_stopping, reduce_lr])\n",
+    "\n",
+    "Y_pred_prob = model.predict(X_test)\n",
+    "Y_pred = np.argmax(Y_pred_prob, axis=1)\n",
+    "Y_test_classes = np.argmax(Y_test, axis=1)\n",
+    "\n",
+    "loss, accuracy = model.evaluate(X_test, Y_test)\n",
+    "\n",
+    "accuracy = accuracy_score(Y_test_classes, Y_pred)\n",
+    "precision = precision_score(Y_test_classes, Y_pred, average='weighted')\n",
+    "recall = recall_score(Y_test_classes, Y_pred, average='weighted')\n",
+    "f1 = f1_score(Y_test_classes, Y_pred, average='weighted')\n",
+    "\n",
+    "print(\"LSTM Accuracy:\", accuracy)\n",
+    "print(\"LSTM Precision:\", precision)\n",
+    "print(\"LSTM Recall:\", recall)\n",
+    "print(\"LSTM F1-score:\", f1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3fe1d492",
    "metadata": {},
    "outputs": [],
    "source": []
