--- a/Third Method Neural Network Implementations.ipynb
+++ b/Third Method Neural Network Implementations.ipynb
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "e32cdabb",
    "metadata": {},
    "outputs": [
@@ -1891,7 +1891,6 @@
     "    else:\n",
     "        return 2\n",
     "\n",
-    "# Ensure 'class' column exists in df\n",
     "df['class'] = df['class'].apply(characterize_class).astype(int)\n",
     "\n",
     "# Check the unique classes in the target\n",
@@ -1958,6 +1957,90 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "b69b20cd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/10\n",
+      "\u001b[1m63897/63897\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1990s\u001b[0m 31ms/step - accuracy: 0.7552 - loss: 0.5069 - val_accuracy: 0.7941 - val_loss: 0.4567 - learning_rate: 0.0010\n",
+      "Epoch 2/10\n",
+      "\u001b[1m63897/63897\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1904s\u001b[0m 30ms/step - accuracy: 0.7934 - loss: 0.4566 - val_accuracy: 0.8009 - val_loss: 0.4478 - learning_rate: 0.0010\n",
+      "Epoch 3/10\n",
+      "\u001b[1m63897/63897\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1897s\u001b[0m 30ms/step - accuracy: 0.7971 - loss: 0.4516 - val_accuracy: 0.7985 - val_loss: 0.4503 - learning_rate: 0.0010\n",
+      "Epoch 4/10\n",
+      "\u001b[1m 1229/63897\u001b[0m \u001b[37m━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[1m29:14\u001b[0m 28ms/step - accuracy: 0.8015 - loss: 0.4458"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score\n",
+    "from tensorflow.keras.utils import to_categorical\n",
+    "from tensorflow.keras.models import Sequential\n",
+    "from tensorflow.keras.layers import LSTM, Dense\n",
+    "from tensorflow.keras.callbacks import EarlyStopping, ReduceLROnPlateau\n",
+    "\n",
+    "# Assuming df is already defined and loaded with data\n",
+    "def characterize_class(value):\n",
+    "    if value == 0:\n",
+    "        return 0\n",
+    "    elif value >= 1 and value <= 12:\n",
+    "        return 1\n",
+    "    else:\n",
+    "        return 2\n",
+    "\n",
+    "df['class'] = df['class'].apply(characterize_class).astype(int)\n",
+    "\n",
+    "features = ['posx', 'posy', 'spdx', 'spdy', 'spdx_n', 'spdy_n', 'aclx', 'acly', 'hedx', 'hedy', 'hedx_n', 'hedy_n']\n",
+    "X = df[features].values\n",
+    "Y = to_categorical(df['class'].values, num_classes=3)\n",
+    "\n",
+    "# Use reshape functions to make input compatible\n",
+    "sequence_length = len(features)\n",
+    "X = X.reshape(-1, sequence_length, 1)\n",
+    "\n",
+    "X_train, X_test, Y_train, Y_test = train_test_split(X, Y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "model = Sequential([\n",
+    "    LSTM(128, input_shape=(sequence_length, 1), return_sequences=True),\n",
+    "    LSTM(64, return_sequences=True),\n",
+    "    LSTM(32, return_sequences=True),\n",
+    "    LSTM(16),\n",
+    "    Dense(3, activation='softmax')\n",
+    "])\n",
+    "\n",
+    "model.compile(optimizer='adam', loss='categorical_crossentropy', metrics=['accuracy'])\n",
+    "\n",
+    "early_stopping = EarlyStopping(monitor='val_loss', patience=3, restore_best_weights=True)\n",
+    "reduce_lr = ReduceLROnPlateau(monitor='val_loss', factor=0.2, patience=2, min_lr=0.001)\n",
+    "\n",
+    "model.fit(X_train, Y_train, epochs=10, batch_size=32, validation_split=0.2, callbacks=[early_stopping, reduce_lr])\n",
+    "\n",
+    "Y_pred_prob = model.predict(X_test)\n",
+    "Y_pred = np.argmax(Y_pred_prob, axis=1)\n",
+    "Y_test_classes = np.argmax(Y_test, axis=1)\n",
+    "\n",
+    "loss, accuracy = model.evaluate(X_test, Y_test)\n",
+    "\n",
+    "accuracy = accuracy_score(Y_test_classes, Y_pred)\n",
+    "precision = precision_score(Y_test_classes, Y_pred, average='weighted')\n",
+    "recall = recall_score(Y_test_classes, Y_pred, average='weighted')\n",
+    "f1 = f1_score(Y_test_classes, Y_pred, average='weighted')\n",
+    "\n",
+    "print(\"LSTM Accuracy:\", accuracy)\n",
+    "print(\"LSTM Precision:\", precision)\n",
+    "print(\"LSTM Recall:\", recall)\n",
+    "print(\"LSTM F1-score:\", f1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a66235cf",
    "metadata": {},
    "outputs": [],
    "source": []
