--- a/Classification based on the First Original Featuring Result.ipynb
+++ b/Classification based on the First Original Featuring Result.ipynb
@@ -2365,8 +2365,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "6353ff1e",
+   "execution_count": 8,
+   "id": "c96a29fc",
    "metadata": {},
    "outputs": [
     {
@@ -2380,7 +2380,39 @@
       "Epoch 3/10\n",
       "\u001b[1m63897/63897\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1880s\u001b[0m 29ms/step - accuracy: 0.7281 - loss: 1.0756 - val_accuracy: 0.7343 - val_loss: 1.0397 - learning_rate: 0.0010\n",
       "Epoch 4/10\n",
-      "\u001b[1m 2967/63897\u001b[0m \u001b[37m━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[1m27:01\u001b[0m 27ms/step - accuracy: 0.7326 - loss: 1.0473"
+      "\u001b[1m63897/63897\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1949s\u001b[0m 31ms/step - accuracy: 0.7330 - loss: 1.0467 - val_accuracy: 0.7362 - val_loss: 1.0321 - learning_rate: 0.0010\n",
+      "Epoch 5/10\n",
+      "\u001b[1m63897/63897\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1955s\u001b[0m 31ms/step - accuracy: 0.7351 - loss: 1.0360 - val_accuracy: 0.7366 - val_loss: 1.0259 - learning_rate: 0.0010\n",
+      "Epoch 6/10\n",
+      "\u001b[1m63897/63897\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1979s\u001b[0m 31ms/step - accuracy: 0.7372 - loss: 1.0253 - val_accuracy: 0.7391 - val_loss: 1.0160 - learning_rate: 0.0010\n",
+      "Epoch 7/10\n",
+      "\u001b[1m63897/63897\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1978s\u001b[0m 31ms/step - accuracy: 0.7386 - loss: 1.0171 - val_accuracy: 0.7370 - val_loss: 1.0196 - learning_rate: 0.0010\n",
+      "Epoch 8/10\n",
+      "\u001b[1m63897/63897\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1977s\u001b[0m 31ms/step - accuracy: 0.7389 - loss: 1.0195 - val_accuracy: 0.7396 - val_loss: 1.0193 - learning_rate: 0.0010\n",
+      "Epoch 9/10\n",
+      "\u001b[1m63897/63897\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2002s\u001b[0m 31ms/step - accuracy: 0.7402 - loss: 1.0112 - val_accuracy: 0.7389 - val_loss: 1.0152 - learning_rate: 0.0010\n",
+      "Epoch 10/10\n",
+      "\u001b[1m63897/63897\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1999s\u001b[0m 31ms/step - accuracy: 0.7411 - loss: 1.0095 - val_accuracy: 0.7395 - val_loss: 1.0172 - learning_rate: 0.0010\n",
+      "\u001b[1m19968/19968\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m209s\u001b[0m 10ms/step\n",
+      "\u001b[1m19968/19968\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m32481s\u001b[0m 2s/step - accuracy: 0.7377 - loss: 1.0207\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\david\\anaconda3\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1318: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LSTM Accuracy: 0.738549397303752\n",
+      "LSTM Precision: 0.680212447387418\n",
+      "LSTM Recall: 0.738549397303752\n",
+      "LSTM F1-score: 0.6612208353243875\n"
      ]
     }
    ],
@@ -2442,7 +2474,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3fe1d492",
+   "id": "433df863",
    "metadata": {},
    "outputs": [],
    "source": []
