--- a/Third Method Neural Network Implementations.ipynb
+++ b/Third Method Neural Network Implementations.ipynb
@@ -1955,7 +1955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "b69b20cd",
    "metadata": {},
    "outputs": [
@@ -1970,7 +1970,25 @@
       "Epoch 3/10\n",
       "\u001b[1m63897/63897\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1897s\u001b[0m 30ms/step - accuracy: 0.7971 - loss: 0.4516 - val_accuracy: 0.7985 - val_loss: 0.4503 - learning_rate: 0.0010\n",
       "Epoch 4/10\n",
-      "\u001b[1m 1229/63897\u001b[0m \u001b[37m━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[1m29:14\u001b[0m 28ms/step - accuracy: 0.8015 - loss: 0.4458"
+      "\u001b[1m63897/63897\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1956s\u001b[0m 31ms/step - accuracy: 0.7987 - loss: 0.4487 - val_accuracy: 0.8028 - val_loss: 0.4449 - learning_rate: 0.0010\n",
+      "Epoch 5/10\n",
+      "\u001b[1m63897/63897\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1968s\u001b[0m 31ms/step - accuracy: 0.8010 - loss: 0.4454 - val_accuracy: 0.8040 - val_loss: 0.4410 - learning_rate: 0.0010\n",
+      "Epoch 6/10\n",
+      "\u001b[1m63897/63897\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1993s\u001b[0m 31ms/step - accuracy: 0.8011 - loss: 0.4451 - val_accuracy: 0.8042 - val_loss: 0.4406 - learning_rate: 0.0010\n",
+      "Epoch 7/10\n",
+      "\u001b[1m63897/63897\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2006s\u001b[0m 31ms/step - accuracy: 0.8023 - loss: 0.4428 - val_accuracy: 0.8030 - val_loss: 0.4420 - learning_rate: 0.0010\n",
+      "Epoch 8/10\n",
+      "\u001b[1m63897/63897\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1994s\u001b[0m 31ms/step - accuracy: 0.8040 - loss: 0.4405 - val_accuracy: 0.8046 - val_loss: 0.4395 - learning_rate: 0.0010\n",
+      "Epoch 9/10\n",
+      "\u001b[1m63897/63897\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2025s\u001b[0m 32ms/step - accuracy: 0.8047 - loss: 0.4391 - val_accuracy: 0.8057 - val_loss: 0.4387 - learning_rate: 0.0010\n",
+      "Epoch 10/10\n",
+      "\u001b[1m63897/63897\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2036s\u001b[0m 31ms/step - accuracy: 0.8050 - loss: 0.4386 - val_accuracy: 0.8014 - val_loss: 0.4436 - learning_rate: 0.0010\n",
+      "\u001b[1m19968/19968\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m32463s\u001b[0m 2s/step\n",
+      "\u001b[1m19968/19968\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m149s\u001b[0m 7ms/step - accuracy: 0.8043 - loss: 0.4403\n",
+      "LSTM Accuracy: 0.8050995207852736\n",
+      "LSTM Precision: 0.847651218422755\n",
+      "LSTM Recall: 0.8050995207852736\n",
+      "LSTM F1-score: 0.7891280925138271\n"
      ]
     }
    ],
@@ -2040,7 +2058,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a66235cf",
+   "id": "2ebefd2f",
    "metadata": {},
    "outputs": [],
    "source": []
