--- a/Classification based on the Second Original Featuring Result.ipynb
+++ b/Classification based on the Second Original Featuring Result.ipynb
@@ -1677,7 +1677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "e12c87af",
    "metadata": {},
    "outputs": [
@@ -1692,7 +1692,25 @@
       "Epoch 3/10\n",
       "\u001b[1m63897/63897\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1894s\u001b[0m 30ms/step - accuracy: 0.7893 - loss: 0.4631 - val_accuracy: 0.7915 - val_loss: 0.4594 - learning_rate: 0.0010\n",
       "Epoch 4/10\n",
-      "\u001b[1m 2933/63897\u001b[0m \u001b[37m━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[1m27:23\u001b[0m 27ms/step - accuracy: 0.7902 - loss: 0.4617"
+      "\u001b[1m63897/63897\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1952s\u001b[0m 31ms/step - accuracy: 0.7921 - loss: 0.4583 - val_accuracy: 0.7958 - val_loss: 0.4516 - learning_rate: 0.0010\n",
+      "Epoch 5/10\n",
+      "\u001b[1m63897/63897\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1976s\u001b[0m 31ms/step - accuracy: 0.7976 - loss: 0.4498 - val_accuracy: 0.8038 - val_loss: 0.4433 - learning_rate: 0.0010\n",
+      "Epoch 6/10\n",
+      "\u001b[1m63897/63897\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1986s\u001b[0m 31ms/step - accuracy: 0.8014 - loss: 0.4449 - val_accuracy: 0.8043 - val_loss: 0.4409 - learning_rate: 0.0010\n",
+      "Epoch 7/10\n",
+      "\u001b[1m63897/63897\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1980s\u001b[0m 31ms/step - accuracy: 0.8026 - loss: 0.4423 - val_accuracy: 0.8064 - val_loss: 0.4367 - learning_rate: 0.0010\n",
+      "Epoch 8/10\n",
+      "\u001b[1m63897/63897\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1978s\u001b[0m 31ms/step - accuracy: 0.8049 - loss: 0.4390 - val_accuracy: 0.8069 - val_loss: 0.4364 - learning_rate: 0.0010\n",
+      "Epoch 9/10\n",
+      "\u001b[1m63897/63897\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1999s\u001b[0m 31ms/step - accuracy: 0.8054 - loss: 0.4378 - val_accuracy: 0.8049 - val_loss: 0.4391 - learning_rate: 0.0010\n",
+      "Epoch 10/10\n",
+      "\u001b[1m63897/63897\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1999s\u001b[0m 31ms/step - accuracy: 0.8065 - loss: 0.4360 - val_accuracy: 0.8084 - val_loss: 0.4335 - learning_rate: 0.0010\n",
+      "\u001b[1m19968/19968\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m194s\u001b[0m 10ms/step\n",
+      "\u001b[1m19968/19968\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m32477s\u001b[0m 2s/step - accuracy: 0.8069 - loss: 0.4352\n",
+      "LSTM Accuracy: 0.8077726061956736\n",
+      "LSTM Precision: 0.8490854361193134\n",
+      "LSTM Recall: 0.8077726061956736\n",
+      "LSTM F1-score: 0.7924297208647043\n"
      ]
     }
    ],
@@ -1762,7 +1780,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8738948d",
+   "id": "fc1af744",
    "metadata": {},
    "outputs": [],
    "source": []
