--- a/Classification based on the First Original Featuring Result.ipynb
+++ b/Classification based on the First Original Featuring Result.ipynb
@@ -2182,6 +2182,7 @@
     "import tensorflow as tf\n",
     "from tensorflow.keras.models import Sequential\n",
     "from tensorflow.keras.layers import Dense, Dropout\n",
+    "from sklearn.preprocessing import StandardScaler\n",
     "\n",
     "features = ['posx', 'posy', 'posx_n', 'posy_n', 'spdx', 'spdy', 'spdx_n', 'spdy_n', 'aclx', 'acly', \n",
     "            'aclx_n', 'acly_n', 'hedx', 'hedy', 'hedx_n', 'hedy_n']\n",
